Added getDiscordFriends endpoint
